--- a/package.json
+++ b/package.json
@@ -52,11 +52,14 @@
     "embla-carousel-react": "^8.3.0",
     "eslint": "8.49.0",
     "eslint-config-next": "13.5.1",
+    "exa-js": "^1.3.3",
     "input-otp": "^1.2.4",
     "lucide-react": "^0.446.0",
+    "mui-markdown": "^1.2.3",
     "next": "^13.5.4",
     "next-themes": "^0.3.0",
     "openai": "^4.29.1",
+    "pg": "^8.13.1",
     "postcss": "8.4.30",
     "prisma": "^5.11.0",
     "react": "18.2.0",
