--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "postinstall": "prisma generate"
   },
   "dependencies": {
+    "@azure/openai": "^2.0.0",
     "@clerk/nextjs": "^6.5.1",
     "@hookform/resolvers": "^3.9.0",
     "@next/swc-wasm-nodejs": "13.5.1",
@@ -58,7 +59,7 @@
     "mui-markdown": "^1.2.3",
     "next": "^13.5.4",
     "next-themes": "^0.3.0",
-    "openai": "^4.29.1",
+    "openai": "^4.73.1",
     "pg": "^8.13.1",
     "postcss": "8.4.30",
     "prisma": "^5.11.0",
